--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
-    <title>JTran Demo</title>
+    <title>JSub Demo</title>
 </head>
 <body style="height: 87vh">
 <div class="container" style="margin-top: 40px; margin-bottom: 30px; min-height: 87vh; height: auto !important">
@@ -51,9 +51,13 @@
     {% for item in result %}
     <h5 style="margin-top: 30px">{{ item.lexeme|join(' / ') }} 〖{{ item.reading|join(' / ') }}〗</h5>
     <ol>
-    {% for tr in item.translation %}
-    <li>{{ tr }}</li>
-    {% endfor %}
+        {% for tr in item.translation %}
+        {% if item.translation|length > 1 %}
+        <li>{{ tr }}</li>
+        {% else %}
+        <li style="list-style-type:none">{{ tr }}</li>
+        {% endif %}
+        {% endfor %}
     </ol>
     {% endfor %}
     {% else %}
@@ -63,7 +67,8 @@
     {% endif %}
 </div>
 
-<div style="text-align:center; width: 100%; margin-bottom: 30px">ktbr, 2021 | <a href="https://github.com/kateabr/jsub"><span class="fas fa-code-branch" style="margin-right: 2px"></span>GitHub</a></div>
+<div style="text-align:center; width: 100%; margin-bottom: 30px">ktbr, 2021 | <a href="https://github.com/kateabr/jsub"><span
+        class="fas fa-code-branch" style="margin-right: 2px"></span>GitHub</a></div>
 </body>
 <script>
     function translate() {
@@ -76,7 +81,7 @@
 
         const lexeme = document.getElementById("lexeme").value;
         const reading = document.getElementById("reading").value;
-        if (lexeme!=='') {
+        if (lexeme !== '') {
             window.location.replace('/?dictionary=' + dictionary + '&lexeme=' + lexeme + '&reading=' + reading);
         }
 
