--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
-    <title>JSub Demo</title>
+    <title>JRSub Demo</title>
 </head>
 <body style="height: 87vh">
 <div class="container" style="margin-top: 40px; margin-bottom: 30px; min-height: 87vh; height: auto !important">
@@ -67,7 +67,7 @@
     {% endif %}
 </div>
 
-<div style="text-align:center; width: 100%; margin-bottom: 30px">ktbr, 2021 | <a href="https://github.com/kateabr/jsub"><span
+<div style="text-align:center; width: 100%; margin-bottom: 30px">ktbr, 2021 | <a href="https://github.com/kateabr/jrsub"><span
         class="fas fa-code-branch" style="margin-right: 2px"></span>GitHub</a></div>
 </body>
 <script>
